# data_struct_and_algorithm_base-to_advance_practice

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json
.github/workflows/: docs-guard.yml
docs/: CLAUDE.md  accessibility.md  algorithm-roadmap.md  architecture.md  conventions.md  data.md  decisions.md  dependencies.md  design-system.md  engineering-principles.md  html-guidelines.md  index.md  judge-requirements.md  learning-roadmap.md  math-roadmap.md  project.md  release.md  security.md  testing-edge-cases.md  testing.md  ui.md
docs/adr/: 0000-template.md  0001-local-judge-boundary.md  0002-local-progress-persistence.md  0003-spaced-review-scheduling.md  0004-local-read-only-web-adapter.md  0005-loopback-compile-check.md  0006-plan-curriculum-expansion-to-algorithms-and-mathematics.md
docs/memory/: current.md
docs/memory/sessions/: 2026-06-13-shawn.md  2026-06-14-shawn.md  2026-06-16-shawn.md  2026-06-17-shawn.md  2026-06-21-shawn.md  2026-06-22-shawn.md  2026-06-23-shawn.md  2026-06-28-shawn.md  2026-06-30-shawn.md  YYYY-MM-DD.md
docs/state/: decision-summary.json  tasks-summary.json
docs/tasks/: active.md  backlog.md  blocked.md  completed.md  task-template.md  ui-task-template.md
docs/team/: members.md
include/judge/: case_generator.hpp  catalog.hpp  judge_service.hpp  problem.hpp  process_runner.hpp  progress.hpp  stress_service.hpp
problems/advanced/balanced-tree/A36-order-statistic-avl/: problem.json  statement.md
problems/advanced/balanced-tree/A37-order-statistic-red-black/: problem.json  statement.md
problems/advanced/balanced-tree/A38-treap-split-merge/: problem.json  statement.md
problems/advanced/balanced-tree/A39-implicit-treap-sequence/: problem.json  statement.md
problems/advanced/balanced-tree/A40-splay-tree-access/: problem.json  statement.md
problems/advanced/balanced-tree/A41-leftist-heap-meld/: problem.json  statement.md
problems/advanced/balanced-tree/A42-skew-heap-meld/: problem.json  statement.md
problems/advanced/balanced-tree/A43-binomial-heap/: problem.json  statement.md
problems/advanced/balanced-tree/A44-order-statistic-multiset/: problem.json  statement.md
problems/advanced/fenwick/A01-fenwick-point-prefix/: problem.json  statement.md
problems/advanced/fenwick/A02-fenwick-range-update-point-query/: problem.json  statement.md
problems/advanced/fenwick/A03-fenwick-dual-range-range/: problem.json  statement.md
problems/advanced/fenwick/A04-fenwick-prefix-lower-bound/: problem.json  statement.md
problems/advanced/fenwick/A05-fenwick-frequency-order-statistics/: problem.json  statement.md
problems/advanced/fenwick/A06-fenwick-coordinate-indexed/: problem.json  statement.md
problems/advanced/fenwick/A07-fenwick-two-dimensional/: problem.json  statement.md
problems/advanced/fenwick/A08-fenwick-sparse/: problem.json  statement.md
problems/advanced/segment-tree/A09-segment-tree-recursive-sum/: problem.json  statement.md
problems/advanced/segment-tree/A10-segment-tree-iterative-sum/: problem.json  statement.md
problems/advanced/segment-tree/A11-segment-tree-min-max-monoid/: problem.json  statement.md
scripts/: docs-completed-regen.mjs  docs-guard-adr-status.mjs  docs-guard-links.mjs  docs-guard-schema.mjs  docs-guard-secrets.mjs  docs-new-adr.mjs  docs-new-session.mjs  docs-ready.mjs  docs-refresh.mjs  docs-sync.mjs  docs-utils.mjs  practice.mjs  repo-lint.mjs  team-guard.mjs  team-register.mjs  team-status.mjs  team-utils.mjs  team-whoami.mjs  web-server.mjs
src/: case_generator.cpp  catalog.cpp  judge_service.cpp  main.cpp  process_runner_unsupported.cpp  process_runner_windows.cpp  progress.cpp  stress_service.cpp
src/generators/: advanced_generators.cpp  balanced_tree_generators.cpp  bst_generators.cpp  combinatorics_generators.cpp  forest_dsu_generators.cpp  generating_function_generators.cpp  generator_registry.hpp  generator_support.hpp  graph_generators.cpp  hashing_generators.cpp  linear_algebra_generators.cpp  linear_generators.cpp  number_theory_generators.cpp  segment_tree_generators.cpp  specialized_generators.cpp  static_range_generators.cpp  string_index_generators.cpp  tree_generators.cpp  tree_query_generators.cpp  union_find_generators.cpp
test/: docs-tooling.test.mjs  web-server.test.mjs
tests/: progress_repository_test.cpp  run_cli_test.cmake  run_progress_cli_test.cmake  run_stress_test.cmake
tests/fixtures/submissions/: aho_corasick_matching_bug_one.cpp  aho_corasick_matching_bug_two.cpp  aho_corasick_matching_correct.cpp  amortized_growth_ledger_correct.cpp  amortized_growth_ledger_counts_new_element.cpp  array_adt_correct.cpp  array_binary_tree_correct.cpp  array_binary_tree_one_based.cpp  array_deque_correct.cpp  avl_double_rotation_trace_correct.cpp  avl_double_rotation_trace_single_only.cpp  avl_single_rotation_trace_correct.cpp  avl_single_rotation_trace_wrong_direction.cpp  avl_structural_validation_correct.cpp  avl_structural_validation_local_only.cpp  avl_tree_correct.cpp  avl_tree_without_rebalancing.cpp  balanced_tree_fixture.hpp  berlekamp_massey_correct.cpp  berlekamp_massey_fixture.hpp  berlekamp_massey_reversed_reduction.cpp  berlekamp_massey_wrong_sign.cpp  best_theorem_count_correct.cpp  best_theorem_count_fixture.hpp  best_theorem_count_full_factorials.cpp  best_theorem_count_omit_factorials.cpp  big_factorization_base2_only.cpp  big_factorization_correct.cpp  big_factorization_multiplicity.cpp  binary_lifting_table_bug_one.cpp  binary_lifting_table_bug_two.cpp  binary_lifting_table_correct.cpp  binary_min_heap_correct.cpp  binary_min_heap_no_sift_down_change.cpp  binary_tree_traversal_views_correct.cpp  binary_tree_traversal_views_wrong_preorder.cpp  binomial_heap_aliases_source.cpp  binomial_heap_correct.cpp  binomial_heap_reversed_degrees.cpp  bitset_set_representation_correct.cpp  (+440 more)
tests/fixtures/路徑 with spaces/: stack correct.cpp
web/: app.js  index.html  styles.css
資料結構/: CH3.pptx  CH4.pptx  CH4_2.pptx  CH5-1.pptx  CH5-2.pptx  CH6.pptx  CH7.pptx  CH8.pptx  資料結構.7z
(+1690 files in other folders)
